35 e 36: criando e listando produtos, finalizando docs
